1、增加鼠标滚轮和Ctrl键组合缩放；2、取消序列化方式（否则要求外部继承该类的也需要序列化，且会出现子类信息丢失）。

--- a/TaskTimeLine/Control/TaskTimeLine.xaml
+++ b/TaskTimeLine/Control/TaskTimeLine.xaml
@@ -18,6 +18,9 @@
             <convert:ReverseBoolConvertVisiable x:Key="ReverseBoolConvertVisiable"/>
         </ResourceDictionary>
     </UserControl.Resources>
+    <UserControl.InputBindings>
+        <MouseBinding Gesture=""></MouseBinding>
+    </UserControl.InputBindings>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="40"/>
