--- a/TaskTimeLine/Themes/Generic.xaml
+++ b/TaskTimeLine/Themes/Generic.xaml
@@ -1,6 +1,9 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="/TaskTimeLineLab;Component/Themes/ScrollViewerStyle.xaml"/>
+    </ResourceDictionary.MergedDictionaries>
     <Style x:Key="IconFont" TargetType="TextBlock">
         <Setter Property="FontFamily" Value="../Resources/#iconfont"/>
         <Setter Property="TextAlignment" Value="Center"/>
